@@ -1,12 +1,16 @@
 package com.restaurantefiap.config;
 
-import io.swagger.v3.oas.models.OpenAPI;
-import io.swagger.v3.oas.models.info.Contact;
-import io.swagger.v3.oas.models.info.Info;
-import io.swagger.v3.oas.models.security.SecurityRequirement;
-import io.swagger.v3.oas.models.security.SecurityScheme;
+import java.util.List;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+
+import io.swagger.v3.oas.models.Components;
+import io.swagger.v3.oas.models.OpenAPI;
+import io.swagger.v3.oas.models.info.Contact;
+import io.swagger.v3.oas.models.info.Info; // ESSENCIAL: Importação correta da classe Info
+import io.swagger.v3.oas.models.security.SecurityRequirement;
+import io.swagger.v3.oas.models.security.SecurityScheme;
 
 @Configuration
 public class SwaggerConfig {
@@ -14,7 +18,6 @@ public class SwaggerConfig {
     @Bean
     public OpenAPI customOpenAPI() {
         return new OpenAPI()
-                // informações da API
                 .info(new Info()
                         .title("API Restaurante")
                         .version("1.0")
@@ -25,9 +28,8 @@ public class SwaggerConfig {
                                 .url("https://www.fiap.com.br")
                         )
                 )
-                // configuração de segurança JWT
-                .addSecurityItem(new SecurityRequirement().addList("bearerAuth", java.util.Collections.emptyList()))
-                .components(new io.swagger.v3.oas.models.Components()
+                .addSecurityItem(new SecurityRequirement().addList("bearerAuth", List.of()))
+                .components(new Components() 
                         .addSecuritySchemes("bearerAuth",
                                 new SecurityScheme()
                                         .name("Authorization")
